Cập nhật giao diện trang sushi

--- a/index.html
+++ b/index.html
@@ -252,19 +252,49 @@
   <h2>Phản hồi của khách hàng</h2>
   <div class="testimonial">
     <p>"Món ăn ở đây thật tuyệt vời! Tôi đã có một trải nghiệm ẩm thực đáng nhớ."</p>
+    <div class="rating">
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+    </div>
     <span>- Anh Minh</span>
   </div>
+
   <div class="testimonial">
     <p>"Dịch vụ nhanh chóng và thân thiện. Tôi sẽ quay lại!"</p>
-    <span>- Chi Mai</span>
+    <div class="rating">
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+    </div>
+    <span>- Chị Mai</span>
   </div>
+
   <div class="testimonial">
     <p>"SushiFood là nơi lý tưởng để thưởng thức ẩm thực Nhật Bản."</p>
+    <div class="rating">
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+    </div>
     <span>- Anh Huy</span>
   </div>
 
   <div class="testimonial">
     <p>"Không gian đẹp, phục vụ nhiệt tình, giá hợp lý."</p>
+    <div class="rating">
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+    </div>
     <span>- Chị Hoa</span>
   </div>
 </section>
