--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/086c433d82.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
   <header>
@@ -39,7 +40,7 @@
 
   <!--Hero-->
   <section class="hero">
-    <h1>Ẩm thực Nhật Bản tinh túy</h1>
+    <h1>Ẩm Thực Nhật Bản Tinh Túy</h1>
     <p>Khám phá hương vị độc đáo và tinh tế của ẩm thực Nhật Bản với SushiFood.</p>
     <a href="#menu" class="btn">Khám Phá Ngay</a>
   </section>
@@ -311,11 +312,62 @@
 </section>
 
 <!--Footer-->
-<footer>
-  <p>&copy; 2025 SushiFood. All Rights Reserved.</p>
-  <div class="social">
-    <i class="material-icons">facebook</i>
-    <i class="material-icons">gmail</i>
+<footer class="footer">
+  <div class="footer-container">
+
+      <!--Introduce-->
+      <div class="footer-section">
+        <h3>Liên hệ</h3>
+        <p>Địa chỉ: 123 Sushi Street, Tokyo, Nhật Bản</p>
+        <p>Điện thoại: 0123-456-789</p>
+        <p>Email: support@sushifood.com</p>
+        <button class="store-btn">Hệ thống cửa hàng</button>
+      </div>
+
+      <!--Instruct-->
+      <div class="footer-section">
+        <h3>Hướng dẫn</h3>
+        <ul>
+          <li><a href="#">Hướng dẫn mua hàng</a></li>
+          <li><a href="#">Hướng dẫn thanh toán</a></li>
+          <li><a href="#">Hướng dẫn đổi trả</a></li>
+        </ul>
+      </div>
+
+      <!--Policy-->
+      <div class="footer-section">
+        <h3>Chính sách</h3>
+        <ul>
+          <li><a href="#">Chính sách bảo mật</a></li>
+          <li><a href="#">Chính sách đổi trả</a></li>
+          <li><a href="#">Chính sách vận chuyển</a></li>
+        </ul>
+      </div>
+
+      <!--Social-->
+      <div class="footer-section">
+        <h3>Mạng xã hội</h3>
+        <div class="social-icons">
+          <i class="bi bi-facebook"></i>
+          <i class="bi bi-instagram"></i>
+          <i class="bi bi-youtube"></i>
+        </div>
+      </div>
+
+      <!--Pay-->
+      <div class="footer-section">
+        <h3>Phương thức thanh toán</h3>
+        <div class="payment-icons">
+          <i class="bi bi-credit-card-2-back"></i>
+          <i class="bi bi-paypal"></i>
+          <i class="bi bi-wallet2"></i>
+        </div>
+      </div>
+    </div>
+    
+    <div class="footer-bottom">
+      <p>&copy; 2025 SushiFood. All Rights Reserved.</p>
+    </div>
   </div>
 </footer>
 </body>
