--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
   <!--Testimonials-->
 <section class="testimonials">
-  <h2>Phản hồi của khách hàng</h2>
+  <h2 >Phản hồi của khách hàng</h2>
   <div class="testimonial">
     <p>"Món ăn ở đây thật tuyệt vời! Tôi đã có một trải nghiệm ẩm thực đáng nhớ."</p>
     <div class="rating">
@@ -260,7 +260,7 @@
       <span>★</span>
       <span>★</span>
     </div>
-    <span>- Anh Minh</span>
+    <span class="name">- Anh Minh</span>
   </div>
 
   <div class="testimonial">
@@ -272,7 +272,7 @@
       <span>★</span>
       <span>★</span>
     </div>
-    <span>- Chị Mai</span>
+    <span class="name">- Chị Mai</span>
   </div>
 
   <div class="testimonial">
@@ -284,7 +284,7 @@
       <span>★</span>
       <span>★</span>
     </div>
-    <span>- Anh Huy</span>
+    <span class="name">- Anh Huy</span>
   </div>
 
   <div class="testimonial">
@@ -296,7 +296,19 @@
       <span>★</span>
       <span>★</span>
     </div>
-    <span>- Chị Hoa</span>
+    <span class="name">- Chị Hoa</span>
+  </div>
+
+  <div class="testimonial">
+    <p>"Không gian đẹp, phục vụ nhiệt tình, giá hợp lý."</p>
+    <div class="rating">
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+      <span>★</span>
+    </div>
+    <span class="name">- Chị Lan</span>
   </div>
 </section>
 
@@ -352,10 +364,8 @@
           <i class="bi bi-instagram"></i>
           <i class="bi bi-youtube"></i>
         </div>
-      </div>
 
       <!--Pay-->
-      <div class="footer-section">
         <h3>Phương thức thanh toán</h3>
         <div class="payment-icons">
           <i class="bi bi-credit-card-2-back"></i>
