--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <div class="search-cart">
         <input type="text" id="search" placeholder="Tìm kiếm món ăn...">
-        <i class="material-icons">search</i>
-        <i class="material-symbols-outlined">shopping_bag</i>
+        <i class="material-icons" title="Tìm kiếm">search</i>
+        <i class="material-symbols-outlined" title="Giỏ hàng">shopping_bag</i>
     </div>
   </header>
 
@@ -380,5 +380,15 @@
     </div>
   </div>
 </footer>
+
+<!--Scroll to Top Button-->
+<div id="scrolltotopbtn" title="Lên trang đầu">
+  <button id="scroll">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+</div>
+
+<!--JavaScript-->
+<script src="./js/scrolltotop.js"></script>
 </body>
 </html>
